# QTCLASS

./: README.md
123456/: CMakeLists.txt  main.cpp
Calculator/: CMakeLists.txt  Calculator.h  main.cpp
Calculator_project/: CMakeLists.txt  CalculatorBackend.cpp  CalculatorBackend.h  main.cpp  main.qml
Calculator_task/: CMakeLists.txt  Calculator.cpp  a.cpp  a.h  main.cpp  main.qml
ConstactQAbstractListModel/: CMakeLists.txt  ContactModel.cpp  ContactModel.h  ShowList.qml  main.cpp
Contact_list/: AddContact.qml  CMakeLists.txt  Call_history.qml  Front_page.qml  Phone_book.qml  Whats_app.qml  main.cpp  main.qml
Contact_phone_whatsapp_callhistroy/: CMakeLists.txt  Call_History.cpp  Call_History.h  Contact.cpp  Contact.h  ContactDataModel.cpp  PhoneBook.cpp  PhoneBook.h  Whats_App.cpp  main.cpp
Example_phone/: CMakeLists.txt  Contact.qml  Contactdatamodel.qml  contact.cpp  contact.h  contactdatamodel.cpp  contactdatamodel.h  main.cpp  main.qml
FIRSTCLASS/: FIRSTCLASS.pro  FirstClass.cpp  FirstClass.h  SecondClass.cpp  SecondClass.h  main.cpp
LoginPage/: LoginHandler.cpp  LoginHandler.h  LoginPage.pro  main.cpp  main.qml
Login_page/: CMakeLists.txt  Header.qml  HomePage.qml  LoginPage.qml  RegisterPage.qml  StudentDataList.qml  main.cpp  main.qml  student.cpp  student.h  studentdatamodel.cpp  studentdatamodel.h
MolelviewDelegate/: CMakeLists.txt  main.cpp  main.qml
PhoneBookQAbtractlistModel/: CMakeLists.txt  Contact.cpp  Contact.h  Contact.qml  ContactModel.cpp  ContactModel.h  ContactModel.qml  main.cpp  main.qml
Phone_Book/: AddContacts.qml  CMakeLists.txt  ContactsList.qml  main.cpp  main.qml
Phone_Whatsapp_Callhistory/: Add_contact_list.qml  CMakeLists.txt  Call_history_list.qml  Front_page.qml  Phone_book_list.qml  Whatsapp_list.qml  main.cpp  main.qml
Phone_book/: CMakeLists.txt  main.cpp  main.qml
QML/: CMakeLists.txt  main.cpp  main.qml
Student_login_project/: Backend.cpp  CMakeLists.txt  Student.h
Studentloginpage/: main.cpp  main.qml  student.h
Studentloginpage/studentLoginPage/: Backend.cpp  Student.cpp  studentLoginPage.pro
Task_calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  main.cpp  main.qml
_Calculator_task/: CMakeLists.txt  main.cpp
bug/: CMakeLists.txt  main.cpp  main.qml
bug-example-ra/: CMakeLists.txt  main.cpp
calculator/: CMakeLists.txt  Calcutor.cpp  Calcutor.h  main.cpp
calulatortask/: CMakeLists.txt  calulator.cpp  calulator.h  main.cpp  main.qml
contactList/: CMakeLists.txt  ContactModel.h  Phonebook.cpp  ShowList.qml  main.cpp  main.qml
contact_numbers/: Add_Contact.qml  CMakeLists.txt  Call_History.cpp  Call_History.h  Call_History.qml  Contact.cpp  Contact.h  ContactCall.qml  ContactDataModel.cpp  ContactDataModel.h  FontPage.qml  Frontpage.qml  HomePage.qml  PhoneBook.cpp  PhoneBook.h  Phone_book.qml  Whats_App.cpp  Whats_App.h  Whats_app.qml  contact_numbers.qrc  contact_numbers.qrc.txt  contactmodelmanager.cpp  contactmodelmanager.h  csvloader.cpp  csvloader.h  main.cpp  main.qml
qml1/: CMakeLists.txt  main.cpp  main.qml
rectangletask/Rectangle_task/: mywidget.cpp  mywidget.h
rectangletask/rectangletask/QTBUG-71541/: CMakeLists.txt  Main.qml  main.cpp
studentLoginPage/: main.cpp
studentlogin/: CMakeLists.txt  StudentDetails.cpp  StudentDetails.h  StudentViewModel.cpp  StudentViewModel.h  main.cpp  main.qml
studentlogin/Studentloginpage/: CMakeLists.txt  backend.cpp  backend.h  student.cpp
studentlogin/Studentloginpage/Student_login_project/: Backend.h  main.cpp  main.qml
studentlogin/Studentloginpage/studentLoginPage/: Backend.h  Student.h  main.qml
test/: CMakeLists.txt  main.cpp
untitled/: Student.cpp  Student.h  main.qml
untitled1/: MyResource.qrc  untitled1.pro
untitled1/untitled/: CMakeLists.txt
widget/: CMakeLists.txt  MyWidget.cpp  MyWidget.h
